--- a/smarter-tasks/src/TaskCard.css
+++ b/smarter-tasks/src/TaskCard.css
@@ -17,9 +17,9 @@
   .deleteTaskButton:hover {
     background-color: #cc0000; /* Darker red background on hover */
   }
-  .task-list {
-    list-style-type: none;
-    padding: 0;
+ 
+  .task-item-container {
+    max-width: calc(100% - 60px); /* Adjust the value as needed */
   }
   
   
